# HmVideoPlayer

./: README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/pages/: Index.ets  MainPage.ets
entry/src/main/ets/utils/: Utils.ets
hmvideoplayer/: CHANGELOG.md  Index.ets  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
hmvideoplayer/src/main/: module.json5
hmvideoplayer/src/main/cpp/: CMakeLists.txt
hmvideoplayer/src/main/cpp/capbilities/: AudioDecoder.cpp  Demuxer.cpp  VideoDecoder.cpp
hmvideoplayer/src/main/cpp/capbilities/include/: AudioDecoder.h  Demuxer.h  VideoDecoder.h
hmvideoplayer/src/main/cpp/common/: AudioVideoDecodeCallback.cpp  AudioVideoDecodeCallback.h  CallBackContext.h  CodecUserData.h  OHAudioRenderCallback.cpp  OHAudioRenderCallback.h  SampleInfo.h  StateCode.h
hmvideoplayer/src/main/cpp/common/dfx/error/: AVCodecSampleError.h
hmvideoplayer/src/main/cpp/common/dfx/log/: AVCodecSampleLog.h
hmvideoplayer/src/main/cpp/player/: HmPlayer.cpp  HmPlayer.h  MediaPlayManager.cpp  MediaPlayManager.h
hmvideoplayer/src/main/cpp/render/: EglCore.cpp  PluginManager.cpp  PluginRender.cpp
hmvideoplayer/src/main/cpp/render/include/: EglCore.h  PluginManager.h  PluginRender.h
hmvideoplayer/src/main/cpp/types/libhmvideoplayer/: Index.d.ts  oh-package.json5
hmvideoplayer/src/main/cpp/utils/: LogUtils.h  ResultCode.h
hmvideoplayer/src/main/ets/common/: CommonConstants.ets  StateCode.ets
hmvideoplayer/src/main/ets/components/: MainPage.ets  TestPage.ets
hmvideoplayer/src/ohosTest/: module.json5
(+5 files in other folders)
