# the minimum version of CMake.
cmake_minimum_required(VERSION 3.5.0)
project(myNpmLib)

set(NATIVERENDER_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

if(DEFINED PACKAGE_FIND_FILE)
    include(${PACKAGE_FIND_FILE})
endif()

include_directories(${NATIVERENDER_ROOT_PATH}
                   ${NATIVERENDER_ROOT_PATH}/capbilities/include
                   ${NATIVERENDER_ROOT_PATH}/common
                   ${NATIVERENDER_ROOT_PATH}/common/dfx/err
                   ${NATIVERENDER_ROOT_PATH}/common/dfx/log
                   ${NATIVERENDER_ROOT_PATH}/render/include
                   ${NATIVERENDER_ROOT_PATH}/player)

set(BASE_LIBRARY
    libace_napi.z.so libEGL.so libGLESv3.so libace_ndk.z.so libuv.so libhilog_ndk.z.so
    libnative_media_codecbase.so libnative_media_core.so libnative_media_vdec.so libnative_window.so
    libnative_media_acodec.so libnative_media_avdemuxer.so libnative_media_avsource.so libohaudio.so
)

add_library(hmvideoplayer SHARED player/HmPlayer.cpp
                                 player/MediaPlayManager.cpp
                                 capbilities/Demuxer.cpp
                                 capbilities/VideoDecoder.cpp
                                 capbilities/AudioDecoder.cpp
                                 render/EglCore.cpp
                                 render/PluginRender.cpp
                                 render/PluginManager.cpp
                                 common/AudioVideoDecodeCallback.cpp
                                 common/OHAudioRenderCallback.cpp)

target_link_libraries(hmvideoplayer PUBLIC ${BASE_LIBRARY})
